fixed overlapping names from merge

--- a/posts/static/posts/style.css
+++ b/posts/static/posts/style.css
@@ -63,7 +63,7 @@ header {
     text-align: center;
 }
 
-form {
+#createListingForm {
     max-width: 800px;
     margin: 5px auto;
     background: white;
@@ -73,7 +73,7 @@ form {
     box-shadow: 0px 0px 15px rgba(30, 65, 154, 0.8);
 }
 
-form input {
+#createListingForm input {
     width: 100%;
     padding: 10px;
     margin: 8px 0;
@@ -82,7 +82,7 @@ form input {
     font-family: sans-serif;
 }
 
-form textarea{
+#createListingForm textarea{
     height: 80px;  
     resize: none;  
     width: 100%;
@@ -92,7 +92,7 @@ form textarea{
     font-family: sans-serif;
 }
 
-form button {
+#createListingForm button {
     background-color: #1e419a;
     color: white;
     padding: 10px 15px;
@@ -106,7 +106,7 @@ form button {
     display: flex;
 }
 
-form button:hover {
+#createListingForm button:hover {
     background-color: #0a1e52;
 }
 
